--- a/core/src/test/resources/conf/application.properties
+++ b/core/src/test/resources/conf/application.properties
@@ -3,4 +3,5 @@ db.ulr=jdbc:h2:~/phoneshop/db/h2
 db.user=sa
 db.password=
 db.insertSchema=true
-db.insertDemodata=true
+db.insertDemodata=false
+db.testScript=/db/test-data.sql
