--- a/core/pom.xml
+++ b/core/pom.xml
@@ -35,6 +35,11 @@
       <artifactId>commons-io</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-validator</artifactId>
+    </dependency>
+
 
     <dependency>
       <groupId>junit</groupId>
