--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,20 @@
         <version>2.6</version>
       </dependency>
 
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>3.10</version>
+      </dependency>
+
+      <dependency>
+        <groupId>com.jayway.jsonpath</groupId>
+        <artifactId>json-path-assert</artifactId>
+        <version>2.4.0</version>
+        <scope>test</scope>
+      </dependency>
+
+
 
       <dependency>
         <groupId>org.springframework</groupId>
