almost everything updated

--- a/core/src/main/resources/conf/application.properties
+++ b/core/src/main/resources/conf/application.properties
@@ -5,3 +5,9 @@ db.password=
 db.insertSchema=true
 db.insertDemodata=true
 db.insertTestData=false
+sortField.price=price
+sortField.brand=brand
+sortField.model=model
+sortField.displaySizeInches=displaySizeInches
+page.limit=10
+
