--- a/core/src/test/resources/conf/application.properties
+++ b/core/src/test/resources/conf/application.properties
@@ -7,3 +7,5 @@ db.insertDemodata=false
 db.insertTestData=true
 db.testScript=/db/test-data.sql
 page.limit=10
+sort.fields=price,brand,model,displaySizeInches
+sort.defaultField=price
