--- a/core/src/main/resources/conf/application.properties
+++ b/core/src/main/resources/conf/application.properties
@@ -8,4 +8,5 @@ db.insertTestData=false
 page.limit=10
 sort.defaultField=price
 sort.fields=price,brand,model,displaySizeInches
+order.deliveryPrice=5
 
