--- a/core/src/test/resources/conf/application.properties
+++ b/core/src/test/resources/conf/application.properties
@@ -9,3 +9,4 @@ db.testScript=/db/test-data.sql
 page.limit=10
 sort.fields=price,brand,model,displaySizeInches
 sort.defaultField=price
+order.deliveryPrice=5
