--- a/core/pom.xml
+++ b/core/pom.xml
@@ -45,6 +45,12 @@
       <artifactId>hibernate-validator</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>com.googlecode.libphonenumber</groupId>
+      <artifactId>libphonenumber</artifactId>
+    </dependency>
+
+
 
     <dependency>
       <groupId>junit</groupId>
