--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,13 @@
         <scope>test</scope>
       </dependency>
 
+      <dependency>
+        <groupId>com.googlecode.libphonenumber</groupId>
+        <artifactId>libphonenumber</artifactId>
+        <version>8.12.6</version>
+      </dependency>
+
+
 
 
       <dependency>
