--- a/core/pom.xml
+++ b/core/pom.xml
@@ -48,6 +48,7 @@
     <dependency>
       <groupId>com.googlecode.libphonenumber</groupId>
       <artifactId>libphonenumber</artifactId>
+      <version>8.12.6</version>
     </dependency>
 
 
