--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <org.springframework-version>4.3.10.RELEASE</org.springframework-version>
     <jackson.version>2.6.3</jackson.version>
+    <logback.version>1.2.3</logback.version>
+    <slf4j.version>1.7.26</slf4j.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -117,6 +119,20 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
+
+  <dependencies>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.2.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>${slf4j.version}</version>
+    </dependency>
+  </dependencies>
+
   <build>
     <finalName>phoneshop</finalName>
     <pluginManagement>
